Change buildscript to custom loom
Renamed the module to `avaritia_singularity`
Made the module passive
Add item class to Eternal Singularity automatically
Add logo to mod list entry
Remove unnecessary mod instance
Change asset indentation to tabs