@@ -1,154 +1,185 @@
-buildscript {
-    repositories {
-        maven {
-            url = "https://maven.minecraftforge.net/"
-        }
-        maven {
-            url = "https://plugins.gradle.org/m2/"
-        }
-        maven {
-            url = "https://jitpack.io/"
-        }
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
-    }
+plugins {
+	id "com.crystaelix.loom" version "jitpack-a0ab4404"
+	id "eclipse"
+	id "idea"
+	id "maven-publish"
+	id "net.kyori.blossom" version "[1,2)"
+	id "me.modmuss50.mod-publish-plugin" version "0.5.0"
 }
 
-apply plugin: "net.minecraftforge.gradle.forge"
-apply plugin: "eclipse"
-apply plugin: "maven-publish"
-
 repositories {
-    mavenCentral()
-    jcenter()
-    flatDir {
-        dirs "libs"
-    }
-    maven {
-        url = "https://maven.blamejared.com/"
-    }
-    maven {
-        url = "https://dvs1.progwml6.com/files/maven/"
-    }
-    maven {
-        url = "https://maven.amadornes.com/"
-    }
-    maven {
-        url = "https://maven.ic2.player.to/"
-    }
-    maven {
-        url = "https://maven.tterrag.com/"
-    }
-    maven {
-        url = "https://maven.modmuss50.me/"
-    }
-    maven {
-        url = "https://maven.blamejared.com/"
-    }
-    maven {
-        url = "https://maven.shadowfacts.net/"
-    }
-    maven {
-        url = "https://maven.mcmoddev.com/"
-    }
-    maven {
-        url = "https://maven.thiakil.com/"
-    }
-    maven {
-        url = "https://www.mod-buildcraft.com/maven/"
-    }
-    maven {
-        url = "https://maven.cleanroommc.com/"
-    }
-    maven {
-        url = "https://cursemaven.com/"
-    }
-    maven {
-        url = "https://modmaven.dev/"
-    }
+	mavenCentral()
+	flatDir {
+		dirs "libs"
+	}
+	exclusiveContent {
+		forRepository {
+			maven {
+				url = "https://maven.blamejared.com/"
+			}
+		}
+		filter {
+			includeGroup "mezz.jei"
+		}
+	}
+	exclusiveContent {
+		forRepository {
+			maven {
+				url = "https://maven.covers1624.net/"
+			}
+		}
+		filter {
+			includeGroup "codechicken"
+			includeGroup "morph.avaritia"
+		}
+	}
+	exclusiveContent {
+		forRepository {
+			maven {
+				url = "https://repo.cleanroommc.com/releases/"
+			}
+		}
+		filter {
+			includeGroup "zone.rong"
+		}
+	}
+	exclusiveContent {
+		forRepository {
+			maven {
+				url = "https://cursemaven.com/"
+			}
+		}
+		filter {
+			includeGroup "curse.maven"
+		}
+	}
 }
 
 sourceSets {
-    main
+	main
 }
 
-version = "1.12.2-3.0.0.0"
+def mcVersion = "1.12.2"
+def modName = "JAOPCASingularities"
+def modId = "jaopcasingularities"
+def specVersion = "3"
+def vendor = "thelm"
+
 group = "thelm.jaopca.singularities"
-archivesBaseName = "JAOPCASingularities"
+version = "3.0.1.1"
 
-sourceCompatibility = targetCompatibility = "1.8"
-compileJava {
-    sourceCompatibility = targetCompatibility = "1.8"
+archivesBaseName = "${modName}-${mcVersion}"
+
+java {
+	toolchain.languageVersion = JavaLanguageVersion.of(8)
+	withSourcesJar()
 }
-compileJava.options.encoding = "UTF-8"
 
-minecraft {
-    version = "1.12.2-14.23.5.2847"
-    runDir = "run"
-    mappings = "stable_39"
-    def commonJvmArgs = [
-        "-Xmn768m", "-XX:+DisableExplicitGC", "-XX:+UseConcMarkSweepGC",
-        "-XX:+UseParNewGC", "-XX:+UseNUMA", "-XX:+CMSParallelRemarkEnabled",
-        "-XX:MaxTenuringThreshold=15", "-XX:MaxGCPauseMillis=30", "-XX:GCPauseIntervalMillis=150",
-        "-XX:+UseAdaptiveGCBoundary", "-XX:-UseGCOverheadLimit", "-XX:+UseBiasedLocking",
-        "-XX:SurvivorRatio=8", "-XX:TargetSurvivorRatio=90", "-XX:MaxTenuringThreshold=15",
-        "-XX:+UseFastAccessorMethods", "-XX:+UseCompressedOops", "-XX:+OptimizeStringConcat",
-        "-XX:+AggressiveOpts", "-XX:ReservedCodeCacheSize=2048m", "-XX:+UseCodeCacheFlushing",
-        "-XX:SoftRefLRUPolicyMSPerMB=10000", "-XX:ParallelGCThreads=10", "-Dmixin.hotSwap=true",
-        "-Dmixin.checks.interfaces=true"
-    ]
-    clientJvmArgs.add("-Xmx7G")
-    clientJvmArgs.addAll(commonJvmArgs)
-    clientRunArgs.add("--username=Dev")
-    serverJvmArgs.add("-Xmx3G")
-    serverJvmArgs.addAll(commonJvmArgs)
-    makeObfSourceJar = false
+tasks.withType(JavaCompile).configureEach {
+	options.encoding = "UTF-8"
+}
+
+loom {
+	silentMojangMappingsLicense()
+	interfaceInjection.enableDependencyInterfaceInjection = false
+	runs {
+		configureEach {
+			property "fabric.log.console.level", "debug"
+			environmentVariable "MC_VERSION", mcVersion
+		}
+		client {
+			programArg "--username=Dev"
+			vmArg "-Xmx7G"
+		}
+		server {
+			vmArg "-Xmx3G"
+		}
+	}
+	generatedIntermediateMappings()
 }
 
 dependencies {
-    deobfCompile "mezz.jei:jei_1.12.2:4.16.1.302"
-    deobfCompile "MCMultiPart2:MCMultiPart:2.5.3"
-    deobfCompile "blusunrize:ImmersiveEngineering:0.12-88-506"
-    deobfCompile "codechicken:CodeChickenLib:1.12.2-3.2.3.358:universal"
-    implementation "net.shadowfacts:Forgelin:1.8.4"
-    deobfCompile "CraftTweaker2:CraftTweaker2-API:4.1.20.675"
-    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.675"
-    deobfCompile("morph.avaritia:Avaritia:1.12.2-3.3.0.33:universal") {
-        transitive = false
-    }
+	// Log4j
+	implementation "org.apache.logging.log4j:log4j-core:2.22.1"
 
-    deobfCompile "curse.maven:wrapup-275153:2486198"
-    deobfCompile "curse.maven:jaopca-266936:4292025"
+	// Minecraft
+	minecraft "com.mojang:minecraft:1.12.2"
+	mappings "de.oceanlabs.mcp:mcp_stable:39-1.12"
+	legacyForge "net.minecraftforge:forge:1.12.2-14.23.5.2860"
 
-    deobfCompile "curse.maven:baubles-227083:2518667"
-    deobfCompile "curse.maven:thaumcraft-223628:2629023"
-    deobfCompile "curse.maven:thaumic-jei-285492:2705304"
-    deobfCompile "curse.maven:redstone-flux-270789:2920436"
-    deobfCompile "curse.maven:cofh-core-69162:2920433"
-    deobfCompile "curse.maven:cofh-world-271384:2920434"
-    deobfCompile "curse.maven:thermal-foundation-222880:2926428"
-    deobfCompile "curse.maven:thermal-expansion-69163:2926431"
-    deobfCompile "curse.maven:thermal-dynamics-227443:2920505"
-    deobfCompile "curse.maven:abyssalcraft-53686:3425234"
+	// Dependencies
+	implementation "curse.maven:wrapup-275153:2486198"
+	modImplementation "curse.maven:jaopca-266936:5126036"
+	modImplementation "codechicken:CodeChickenLib:1.12.2-3.2.3.358:universal"
+	modImplementation("morph.avaritia:Avaritia:1.12.2-3.3.0.37:universal") {transitive = false}
+	modImplementation "curse.maven:wanionlib-253043:4623135"
+	modImplementation "curse.maven:eternal-singularity-253077:2922583"
+	modImplementation "mezz.jei:jei_1.12.2:4.16.1.1012"
 
-    deobfCompile "zone.rong:mixinbooter:7.0"
-    deobfCompile "curse.maven:jeid-296289:3581715"
-    deobfCompile "curse.maven:spark-361579:3245793"
-    deobfCompile "curse.maven:lolasm-460609:3834448"
+	// Testing
+	modImplementation "curse.maven:abyssalcraft-53686:4856547"
+
+	// Performance
+	implementation("zone.rong:mixinbooter:9.1") {transitive = false}
+	modImplementation "curse.maven:reid-629017:4949840"
+	modImplementation "curse.maven:vintagefix-871198:5010926"
+	modImplementation "curse.maven:lolasm-460609:4800875"
 }
 
+def replacements = [
+	"0@VERSION@": version
+]
+
+blossom {
+	replaceToken(replacements)
+}
+
+processResources {
+	inputs.properties(replacements)
+	filesMatching(["mcmod.info", "META-INF/mods.toml"]) {
+		filter {
+			it.replace(replacements)
+		}
+	}
+}
+
+def manifestAttributes = [
+	"Specification-Title": modName,
+	"Specification-Vendor": vendor,
+	"Specification-Version": specVersion,
+	"Implementation-Title": archivesBaseName,
+	"Implementation-Version": version,
+	"Implementation-Vendor": vendor
+]
+
 jar {
-    manifest {
-        attributes([
-                "Specification-Title": "JAOPCASingularities",
-                "Specification-Vendor": "thelm",
-                "Specification-Version": "3",
-                "Implementation-Title": "${archivesBaseName}",
-                "Implementation-Version": "${version}",
-                "Implementation-Vendor": "thelm"
-        ],)
-    }
+	manifest.attributes(manifestAttributes)
+}
+
+sourcesJar {
+	manifest.attributes(manifestAttributes)
+}
+
+publishMods {
+	file = remapJar.archiveFile
+	version = displayName = "${mcVersion}-${project.version}"
+	changelog = file("changelog.md").text
+	type = BETA
+	modLoaders.add("forge")
+	additionalFiles.from(remapSourcesJar.archiveFile)
+
+	curseforge {
+		accessToken = providers.gradleProperty("curseforge.token")
+		projectId = "268610"
+		minecraftVersions.add(mcVersion)
+		requires "jaopca", "avaritia-1-10"
+		optional "eternal-singularity"
+	}
+
+	modrinth {
+		accessToken = providers.gradleProperty("modrinth.token")
+		projectId = "O9qb04PW"
+		minecraftVersions.add(mcVersion)
+		requires "jaopca"
+	}
 }
